Add project portfolio page with dynamic project cards and filtering functionality

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       ]
     }
     </script>
-    <script type="application/ld+json">
+  <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
@@ -113,8 +113,8 @@
         }
       }
       </script>
-      
-      <script type="application/ld+json">
+
+  <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "BreadcrumbList",
@@ -131,7 +131,7 @@
         }]
       }
       </script>
-      
+
 </head>
 
 <body>
@@ -606,220 +606,44 @@
 
 
 
-    <!-- ======= Projects Section ======= -->
     <section id="projects" class="projects">
-      <div class="section-title">
-        <h2>My Projects</h2>
-      </div>
-      <div class="projects-container">
-
-
-
-        <!-- Project 1 -->
-        <div class="project-card">
-          <div class="project-card-image-container">
-            <img src="assets/img/portfolio/wa.png" alt="Project 8" class="project-card-image" loading="lazy">
-          </div>
-          <div class="project-card-title">
-            <span>WhatsApp Chat Parser</span>
-          </div>
-          <div class="project-card-description">
-            Easily upload your exported WhatsApp chats and explore them in a beautiful, WhatsApp-style interface. Get
-            message insights, view media, and navigate your digital memories with clarity and precision — just like
-            traveling back in time.
-          </div>
-          <a href="https://texttimemachine.netlify.app/" class="project-card-button" target="_blank">
-            <span>Visit</span>
-          </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/whatsapp-chat-parser" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
+      <div class="container">
+        <div class="section-title">
+          <h2>My Projects</h2>
+          <p>A selection of my recent work. Click the button below to see the full portfolio.</p>
         </div>
 
-        <!-- Project 2 -->
-        <div class="project-card">
-          <div class="project-card-image-container">
-            <img src="assets/img/portfolio/mind.png" alt="Project 10" class="project-card-image" loading="lazy">
+        <div class="projects-container">
+          <div class="marquee-container">
+            <!-- Row 1 (scrolls left) -->
+            <div class="marquee-row" data-speed="0.6" data-direction="left">
+              <div class="marquee-content">
+                <img src="assets/img/portfolio/finger.png" alt="Finger Tracking Gesture Control">
+                <img src="assets/img/portfolio/wa2.png" alt="WhatsApp Chat Parser">
+                <img src="assets/img/portfolio/composting.png" alt="Smart Composting Cap">
+                <img src="assets/img/portfolio/mind.png" alt="MindoraGPT ">
+                <img src="assets/img/portfolio/dna.png" alt="BioPulse">
+              </div>
+            </div>
+
+            <!-- Row 2 (scrolls right) -->
+            <div class="marquee-row" data-speed="0.4" data-direction="right">
+              <div class="marquee-content">
+                <img src="assets/img/portfolio/projectC.webp" alt="VerinoxGPT">
+                <img src="assets/img/portfolio/project6.png" alt="Gallery Nexus ">
+                <img src="assets/img/portfolio/IG.png" alt="AI Powered Image Generator">
+                <img src="assets/img/portfolio/projectB.webp" alt="Premium Dictionary App ">
+                <img src="assets/img/portfolio/p9.png" alt="Personal Fitness Tracker ">
+              </div>
+            </div>
           </div>
-          <div class="project-card-title">
-            <span>🧠 MindoraGPT | Chatbot</span>
+
+          <div class="view-projects-button-wrapper">
+            <a href="projects.html" class="btn-view-projects">View All Projects</a>
           </div>
-          <div class="project-card-description">
-            Your friendly mental wellness chatbot offering supportive conversations, affirmations, and
-            AI-powered care.🌿 Built with compassion, it blends technology and empathy to help you feel heard, calm, and
-            uplifted.
-          </div>
-          <a href="https://mindoragpt.netlify.app/" class="project-card-button" target="_blank">
-            <span>Visit</span>
-          </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/mental-wellness-chatbot"
-            data-icon="octicon-star" data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
         </div>
-
-        <!-- Project 3 -->
-        <div class="project-card">
-          <div class="project-card-image-container">
-            <img src="assets/img/portfolio/dna.png" alt="Project 3" class="project-card-image" loading="lazy">
-          </div>
-          <div class="project-card-title">
-            <span>BioPulse | DNA to Music</span>
-          </div>
-          <div class="project-card-description">
-            BioPulse transforms DNA sequences into musical compositions in real time, blending science with sound.
-            Upload or paste your sequence, watch it come alive with animated visuals, and explore genetic patterns
-            through harmony.
-          </div>
-          <a href="https://bio-pulse.netlify.app/" class="project-card-button" target="_blank">
-            <span>Visit</span>
-          </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/dna-to-music" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-          <script async defer src="https://buttons.github.io/buttons.js"></script>
-        </div>
-
-        <!-- Project 4 -->
-        <div class="project-card">
-          <div class="project-card-image-container">
-            <img src="assets/img/portfolio/projectC.webp" alt="Project 4" class="project-card-image" loading="lazy">
-          </div>
-          <div class="project-card-title">
-            <span>VerinoxGPT | Chatbot</span>
-          </div>
-          <div class="project-card-description">
-            This project is Verinox GPT, a professional, ChatGPT-like web application built with React and TypeScript
-            that functions as an elite AI assistant powered by OpenAI's GPT-4.
-          </div>
-          <a href="https://verinox-gpt.netlify.app/" class="project-card-button" target="_blank">
-            <span>Visit</span>
-          </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/chatbot" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-        </div>
-        <!-- Project 9 -->
-        <div class="project-card">
-          <div class="project-card-image-container">
-            <img src="assets/img/portfolio/finger.png" alt="Project 9" class="project-card-image" loading="lazy">
-          </div>
-          <div class="project-card-title">
-            <span>Finger Tracking Gesture Control</span>
-          </div>
-          <div class="project-card-description">
-            Fingr Lab is an interactive WebGL demo that allows you to control and manipulate 3D objects in real-time
-            using your hand gestures. Powered by MediaPipe and Three.js
-          </div>
-          <a href="https://fingrlab.netlify.app/" class="project-card-button" target="_blank">
-            <span>Visit</span>
-          </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/3D-gesture-control" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-        </div>
-
-        <!-- Project 5 
-        <div class="project-card">
-          <div class="project-card-image-container">
-            <img src="assets/img/portfolio/projectE.webp" alt="Project 5" class="project-card-image">
-          </div>
-          <div class="project-card-title">
-            <span>CGPA Calculator - SIMATS College </span>
-          </div>
-          <div class="project-card-description">
-            A simple and efficient tool designed for SIMATS College 🏫, allowing students 🧑‍🎓 to enter grades and get
-            accurate, fast, and reliable CGPA calculations based on the college’s unique grading system. 🎓📈
-          </div>
-          <a href="https://simatscgpa.netlify.app/" class="project-card-button" target="_blank">
-            <span>Visit</span>
-          </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/cgpa/" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-        </div> -->
-
-        <!-- Project 6 -->
-        <div class="project-card">
-          <div class="project-card-image-container">
-            <img src="assets/img/portfolio/project6.png" alt="Project 6" class="project-card-image" loading="lazy">
-          </div>
-          <div class="project-card-title">
-            <span>Gallery Nexus | Image Gallery</span>
-          </div>
-          <div class="project-card-description">
-            A powerful image and video gallery using the Pexels API, allowing users to search, explore, and download
-            HD-quality media freely With a seamless and user-friendly interface 🚀📸
-          </div>
-          <a href="https://gallery-nexus.netlify.app/" class="project-card-button" target="_blank">
-            <span>Visit</span>
-          </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/image-gallery" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-        </div>
-
-        <!-- Project 7 -->
-        <div class="project-card">
-          <div class="project-card-image-container">
-            <img src="assets/img/portfolio/IG.png" alt="Project 7" class="project-card-image" loading="lazy">
-          </div>
-          <div class="project-card-title">
-            <span>AI Powered Image Generator</span>
-          </div>
-          <div class="project-card-description">
-            Dream Render is a feature-rich application designed to provide a seamless and inspiring creative experience.
-            An elegant and powerful AI Image Generator built with React, Vite, and Tailwind CSS.
-          </div>
-          <a href="https://dreamrender.netlify.app/" class="project-card-button" target="_blank">
-            <span>Visit</span>
-          </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/image-generator" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-        </div>
-
-        <!-- Project 8 -->
-        <div class="project-card">
-          <div class="project-card-image-container">
-            <img src="assets/img/portfolio/projectA.webp" alt="Project 1" class="project-card-image" loading="lazy">
-          </div>
-          <div class="project-card-title">
-            <span>🎮 Guess to Freedom Game</span>
-          </div>
-          <div class="project-card-description">
-            A thrilling Hangman-style word game where you must guess the word before running out of attempts! 🏆💡 Every
-            round brings a new word & hint, making each game a fresh challenge. Ready to test your vocabulary?
-          </div>
-          <a href="https://lettermind.netlify.app/" class="project-card-button" target="_blank">
-            <span>Visit</span>
-          </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/Hangman-game/" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-          <script async defer src="https://buttons.github.io/buttons.js"></script>
-
-        </div>
-
-
-
-        <!-- Project 10 -->
-        <div class="project-card">
-          <div class="project-card-image-container">
-            <img src="assets/img/portfolio/projectB.webp" alt="Project 2" class="project-card-image" loading="lazy">
-          </div>
-          <div class="project-card-title">
-            <span>📖 Premium Dictionary App 🌍</span>
-          </div>
-          <div class="project-card-description">
-            A powerful dictionary powered by APIs, providing word meanings, 📚 Wikipedia content with links, and 🖼️
-            related images. Users enjoy a smooth, premium experience while exploring words effortlessly! 🚀🔍
-          </div>
-          <a href="https://wordsage.netlify.app/" class="project-card-button" target="_blank">
-            <span>Visit</span>
-          </a>
-          <a class="github-button" href="https://github.com/Jayanth0124/dictionary" data-icon="octicon-star"
-            data-size="large" aria-label="Star YourRepo on GitHub">Star on GitHub</a>
-          <script async defer src="https://buttons.github.io/buttons.js"></script>
-        </div>
-
-
-
       </div>
     </section>
-    <!-- ======= End Projects Section ======= -->
-
-
 
     <style>
       .projects {
@@ -832,137 +656,95 @@
         margin-left: 10px;
       }
 
-      /* Project Cards Container */
-      .projects-container {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 1rem;
-        justify-content: center;
-      }
 
-      /* 🔥 Unique Project Card Styling 🔥 */
-      .project-card {
-        --bg-card: #27272a;
-        --primary: #6d28d9;
-        --primary-800: #4c1d95;
-        --primary-shadow: #2e1065;
-        --light: #d9d9d9;
-        --bg-linear: linear-gradient(0deg, var(--primary) 50%, var(--light) 125%);
-
-        position: relative;
+      .projects .projects-container {
         display: flex;
         flex-direction: column;
-        gap: 0.75rem;
-        padding: 1.5rem;
-        width: 22rem;
-        height: auto;
-        min-height: 180px;
-        /* Adjusted for text */
-        background-color: var(--bg-card);
-        border-radius: 1rem;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+        align-items: center;
+        gap: 2rem;
       }
 
-      /* Image Container - Responsive */
-      .project-card-image-container {
+      .marquee-container {
         width: 100%;
-        max-width: 1900px;
-        height: auto;
-        aspect-ratio: 1900 / 903;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
         overflow: hidden;
-        background-color: #4c1d95;
-        border-radius: 0.5rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
       }
 
-      /* Project Image - Responsive Fit */
-      .project-card-image {
-        width: 100%;
-        height: 100%;
+      .marquee-row {
+        overflow: hidden;
+        white-space: nowrap;
+        position: relative;
+      }
+
+      .marquee-content {
+        display: inline-flex;
+        gap: 20px;
+        will-change: transform;
+      }
+
+      .marquee-content img {
+        height: 200px;
+        border-radius: 12px;
         object-fit: cover;
-        border-radius: 0.5rem;
-        border: 1px solid gold;
-        /* Gold border */
+        flex-shrink: 0;
+        transition: transform 0.3s ease;
       }
 
-      /* ✅ Project Title */
-      .project-card-title {
-        width: 100%;
-        font-size: 1.2rem;
+      .marquee-content img:hover {
+        transform: scale(1.05);
+      }
+
+      .view-projects-button-wrapper {
+        margin-top: 30px;
+      }
+
+      .btn-view-projects {
+        display: inline-block;
+        padding: 14px 40px;
+        border-radius: 50px;
+        background-color: #343a40;
+        color: #fff;
         font-weight: 600;
-        color: var(--light);
-        text-transform: capitalize;
-        text-align: center;
-        white-space: normal;
-        word-wrap: break-word;
+        text-decoration: none;
+        transition: all 0.3s ease;
       }
 
-      /* ✅ Small Description */
-      .project-card-description {
-        font-size: 0.9rem;
-        color: #d9d9d9;
-        text-align: center;
-        line-height: 1.4;
-        padding: 0 10px;
-      }
-
-      /* ✅ Project Button */
-      .project-card-button {
-        cursor: pointer;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 0.25rem;
-        padding: 0.75rem;
-        width: 100%;
-        background-image: var(--bg-linear);
-        font-size: 0.85rem;
-        font-weight: 500;
-        color: var(--light);
-        white-space: normal;
-        text-align: center;
-        border: 2px solid hsla(262, 83%, 58%, 0.5);
-        border-radius: 0.5rem;
-        box-shadow: inset 0 0 0.25rem 1px var(--light);
-      }
-
-      .project-card-button:hover {
-        border-color: gold;
-        box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-      }
-
-      /* 🎯 Click Effect */
-      .project-card-button:active {
-        transform: scale(0.95);
-      }
-
-
-
-      /* 📱 Responsive Design */
-      @media (max-width: 600px) {
-        .projects-container {
-          flex-direction: column;
-          align-items: center;
-        }
-
-        .project-card {
-          width: 90%;
-          /* Adjust width for small screens */
-        }
-
-        .project-card-title {
-          font-size: 1.2rem;
-          /* Slightly larger text for readability */
-        }
-
-        .project-card-description {
-          font-size: 0.85rem;
-          /* Adjusted for mobile readability */
-        }
+      .btn-view-projects:hover {
+        background-color: #000;
+        transform: translateY(-2px);
       }
     </style>
+
+    <script>
+      document.querySelectorAll(".marquee-row").forEach(row => {
+        const content = row.querySelector(".marquee-content");
+        // Duplicate items for infinite loop
+        content.innerHTML += content.innerHTML;
+
+        let speed = parseFloat(row.dataset.speed);
+        if (window.innerWidth < 768) speed *= 2; // faster on mobile
+
+        const direction = row.dataset.direction || "left";
+        let x = -Math.random() * (content.scrollWidth / 2); // random start
+
+        function step() {
+          if (direction === "left") {
+            x -= speed;
+            if (x <= -content.scrollWidth / 2) x = 0;
+          } else {
+            x += speed;
+            if (x >= 0) x = -content.scrollWidth / 2;
+          }
+          content.style.transform = `translateX(${x}px)`;
+          requestAnimationFrame(step);
+        }
+        step();
+      });
+    </script>
+
+
 
 
     <!-- ======= Education Section ======= -->
