Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -623,6 +623,7 @@
                 <img src="assets/img/portfolio/composting.png" alt="Smart Composting Cap">
                 <img src="assets/img/portfolio/mind.png" alt="MindoraGPT ">
                 <img src="assets/img/portfolio/dna.png" alt="BioPulse">
+                <img src="assets/img/portfolio/stock.png" alt="AI Stock Analyzer">
               </div>
             </div>
 
