--- a/projects.html
+++ b/projects.html
@@ -364,6 +364,15 @@
                     
                 },
                 {
+                    id: 12, title: "AI Stock Analyzer",
+                    description: "This is an AI-powered web app that predicts stock prices by combining technical chart analysis with real-time market news sentiment.",
+                    thumbnail: "assets/img/portfolio/stock.png",
+                    techStack: ["Python","streamlit",'git'], category: ["ai"],
+                    demoUrl: "https://nexttrade.streamlit.app/", githubUrl: "https://github.com/Jayanth0124/stock-analyzer",
+                    githubRepo:"Jayanth0124/stock-analyzer"
+                    
+                },
+                {
                     id: 2, title: "🧠 MindoraGPT | Chatbot",
                     description: "Your friendly mental wellness chatbot offering supportive conversations, affirmations, and AI-powered care.🌿 Built with compassion, it blends technology and empathy to help you heard, calm, and uplifted",
                     thumbnail: "assets/img/portfolio/mind.png",
