Update favicon links to use consistent image for icon and jayanth reference

--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="assets/img/jayanth.png" rel="icon">
+    <link href="assets/img/jayanth.png" rel="jayanth">
 
     <meta name="theme-color" content="#ffffff">
 
@@ -367,7 +367,7 @@
                     id: 12, title: "AI Stock Analyzer",
                     description: "This is an AI-powered web app that predicts stock prices by combining technical chart analysis with real-time market news sentiment.",
                     thumbnail: "assets/img/portfolio/stock.png",
-                    techStack: ["Python","streamlit",'git'], category: ["ai"],
+                    techStack: ["Python","streamlit",'git'], category: ["ai","python"],
                     demoUrl: "https://nexttrade.streamlit.app/", githubUrl: "https://github.com/Jayanth0124/stock-analyzer",
                     githubRepo:"Jayanth0124/stock-analyzer"
                     
