--- a/photo.html
+++ b/photo.html
@@ -10,7 +10,8 @@
   <meta name="keywords" content="Jayanth, photo gallery, project images, portfolio snapshots, design work">
   <meta name="author" content="Donavalli Jayanth">
   <link rel="canonical" href="https://www.jayanth.site/photo.html" />
-
+  <link href="assets/img/jayanth.png" rel="icon">
+  <link href="assets/img/jayanth.png" rel="jayanth">
   <link rel="stylesheet" href="assets/css/style1.css">
 
 </head>
