Comment out unused portfolio item in index.html

--- a/index.html
+++ b/index.html
@@ -958,7 +958,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/forage.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
@@ -967,7 +967,7 @@
                 <a href="awards/forage.html" title="More Details"><i class="bx bx-expand-alt"></i></a>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
