Add Google site verification meta tag to 404, photo, and projects pages

--- a/photo.html
+++ b/photo.html
@@ -10,6 +10,7 @@
   <meta name="keywords" content="Jayanth, photo gallery, project images, portfolio snapshots, design work">
   <meta name="author" content="Donavalli Jayanth">
   <link rel="canonical" href="https://www.jayanth.site/photo.html" />
+  <meta name="google-site-verification" content="RgDlIEHIkNAYH_iKQo5yOkA6BhKnkq2cjNAYhV8s9y0">
   <link href="assets/img/jayanth.png" rel="icon">
   <link href="assets/img/jayanth.png" rel="jayanth">
   <link rel="stylesheet" href="assets/css/style1.css">
