--- a/projects.html
+++ b/projects.html
@@ -13,6 +13,7 @@
     <meta name="robots" content="index, follow">
 
     <link rel="canonical" href="https://jayanth.site/projects.html">
+    <meta name="google-site-verification" content="RgDlIEHIkNAYH_iKQo5yOkA6BhKnkq2cjNAYhV8s9y0">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
