--- a/404.html
+++ b/404.html
@@ -10,6 +10,7 @@
     <meta name="keywords" content="Jayanth, 404, page not found, portfolio">
     <meta name="author" content="Donavalli Jayanth">
     <link rel="canonical" href="https://www.jayanth.site/404.html" />
+    <meta name="google-site-verification" content="RgDlIEHIkNAYH_iKQo5yOkA6BhKnkq2cjNAYhV8s9y0">
     <meta name="robots" content="noindex, follow">
     <script type="application/ld+json">
         {
