updated Interest section with tool tip

--- a/index.html
+++ b/index.html
@@ -1197,205 +1197,199 @@
 
 
     <!-- ======= Interests Section ======= -->
-    <section id="interests" class="interests-section">
-      <div class="container">
+<section id="interests" class="interests-section">
+  <div class="container">
 
-        <div class="section-title">
+      <div class="section-title">
           <h2>Interests</h2>
           <p>Explore my interests.</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up">
-              <div class="icon"><i class="bi bi-laptop"></i></div>
-              <h4 class="title"><a href="#">Web Development</a></h4>
-              <p class="description">As a web development enthusiast, I'm passionate about crafting engaging and
-                user-friendly digital experiences. From front-end design to back-end functionality, I enjoy diving into
-                the intricacies of coding languages and frameworks to bring ideas to life on the web.</p>
-            </div>
-          </div>
-          <!-- <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bi bi-pencil"></i></div>
-              <h4 class="title"><a href="#">Graphic Design</a></h4>
-              <p class="description">Graphic design is my creative playground where I blend visual aesthetics with
-                strategic thinking. I love exploring the interplay of colors, typography, and imagery to communicate
-                messages effectively and leave a lasting impression.</p>
-            </div>
-          </div> -->
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up" data-aos-delay="200">
-              <div class="icon"><i class="bi bi-camera"></i></div>
-              <h4 class="title"><a href="#">Photography</a></h4>
-              <p class="description">Photography is my lens to capture the beauty and diversity of the world around us.
-                Whether it's exploring new landscapes or finding the extraordinary in the ordinary, I'm constantly
-                seeking to freeze moments in time and evoke emotions through my lens.</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up" data-aos-delay="300">
-              <div class="icon"><i class="bi bi-globe"></i></div>
-              <h4 class="title"><a href="#">Travel</a></h4>
-              <p class="description">Traveling isn't just a hobby; it's a way of life for me. Exploring new cultures,
-                cuisines, and landscapes ignites my sense of adventure and broadens my perspective. Each journey is an
-                opportunity to embrace diversity, create unforgettable memories, and foster personal growth.</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up" data-aos-delay="400">
-              <div class="icon"><i class="bi-palette"></i></div>
-              <h4 class="title"><a href="#">UI/UX Design</a></h4>
-              <p class="description">UI/UX design is where functionality meets aesthetics, and I thrive in finding the
-                perfect balance between the two. From wireframing to prototyping, I enjoy crafting seamless and
-                intuitive user experiences that resonate with audiences and elevate digital products to the next level.
-              </p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up" data-aos-delay="500">
-              <div class="icon"><i class="bi bi-headset"></i></div>
-              <h4 class="title"><a href="#">Music</a></h4>
-              <p class="description">Explore the world of music, from classical to contemporary genres. Discover new
-                artists, albums, and songs. Learn about music theory, composition, and performance techniques.</p>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6 mb-4">
-            <div class="interests-box" data-aos="fade-up" data-aos-delay="600">
-              <div class="icon"><i class="bi bi-fingerprint"></i></div>
-              <h4 class="title"><a href="#">Ethical Hacking</a></h4>
-              <p class="description">Learn about ethical hacking, cybersecurity, and penetration testing to protect
-                digital assets and enhance security measures. Explore tools, techniques, and methodologies for
-                identifying and mitigating security vulnerabilities.</p>
-            </div>
-          </div>
-        </div>
-
       </div>
-    </section>
-    <!-- End Interests Section -->
+
+      <div class="row">
+          <div class="col-lg-4 col-md-6 mb-4">
+              <div class="interests-box" data-aos="fade-up">
+                  <div class="interest-orb">
+                      <div class="icon"><i class="bi bi-laptop"></i></div>
+                      <span class="tooltip">Web Development</span>
+                  </div>
+                  <h4 class="title"><a href="#">Web Development</a></h4>
+                  <p class="description">As a web development enthusiast, I'm passionate about crafting engaging and
+                      user-friendly digital experiences. From front-end design to back-end functionality, I enjoy diving into
+                      the intricacies of coding languages and frameworks to bring ideas to life on the web.</p>
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+              <div class="interests-box" data-aos="fade-up" data-aos-delay="200">
+                  <div class="interest-orb">
+                      <div class="icon"><i class="bi bi-camera"></i></div>
+                      <span class="tooltip">Photography</span>
+                  </div>
+                  <h4 class="title"><a href="#">Photography</a></h4>
+                  <p class="description">Photography is my lens to capture the beauty and diversity of the world around us.
+                      Whether it's exploring new landscapes or finding the extraordinary in the ordinary, I'm constantly
+                      seeking to freeze moments in time and evoke emotions through my lens.</p>
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+              <div class="interests-box" data-aos="fade-up" data-aos-delay="300">
+                  <div class="interest-orb">
+                      <div class="icon"><i class="bi bi-globe"></i></div>
+                      <span class="tooltip">Travel</span>
+                  </div>
+                  <h4 class="title"><a href="#">Travel</a></h4>
+                  <p class="description">Traveling isn't just a hobby; it's a way of life for me. Exploring new cultures,
+                      cuisines, and landscapes ignites my sense of adventure and broadens my perspective. Each journey is an
+                      opportunity to embrace diversity, create unforgettable memories, and foster personal growth.</p>
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+              <div class="interests-box" data-aos="fade-up" data-aos-delay="400">
+                   <div class="interest-orb">
+                      <div class="icon"><i class="bi bi-palette"></i></div>
+                      <span class="tooltip">UI/UX Design</span>
+                  </div>
+                  <h4 class="title"><a href="#">UI/UX Design</a></h4>
+                  <p class="description">UI/UX design is where functionality meets aesthetics, and I thrive in finding the
+                      perfect balance between the two. From wireframing to prototyping, I enjoy crafting seamless and
+                      intuitive user experiences that resonate with audiences and elevate digital products to the next level.
+                  </p>
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+              <div class="interests-box" data-aos="fade-up" data-aos-delay="500">
+                  <div class="interest-orb">
+                      <div class="icon"><i class="bi bi-headset"></i></div>
+                      <span class="tooltip">Music</span>
+                  </div>
+                  <h4 class="title"><a href="#">Music</a></h4>
+                  <p class="description">Explore the world of music, from classical to contemporary genres. Discover new
+                      artists, albums, and songs. Learn about music theory, composition, and performance techniques.</p>
+              </div>
+          </div>
+          <div class="col-lg-4 col-md-6 mb-4">
+              <div class="interests-box" data-aos="fade-up" data-aos-delay="600">
+                  <div class="interest-orb">
+                      <div class="icon"><i class="bi bi-fingerprint"></i></div>
+                      <span class="tooltip">Ethical Hacking</span>
+                  </div>
+                  <h4 class="title"><a href="#">Ethical Hacking</a></h4>
+                  <p class="description">Learn about ethical hacking, cybersecurity, and penetration testing to protect
+                      digital assets and enhance security measures. Explore tools, techniques, and methodologies for
+                      identifying and mitigating security vulnerabilities.</p>
+              </div>
+          </div>
+      </div>
+
+  </div>
+</section>
+<!-- End Interests Section -->
+
+<style>
+  /* --- Keyframe Animation for Orbiting Icon --- */
+  @keyframes orbit {
+      0% { transform: rotate(0deg) translateX(5px) rotate(0deg); }
+      100% { transform: rotate(360deg) translateX(5px) rotate(-360deg); }
+  }
+
+  /* --- Orb Container for the Animation --- */
+  .interest-orb {
+      position: relative; /* Needed for tooltip positioning */
+      margin: 0 auto 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      animation: orbit 8s linear infinite;
+  }
+
+  /* --- Tooltip Styling --- */
+  .interest-orb .tooltip {
+      position: absolute;
+      top: -30px; /* Position above the icon */
+      background: #333; /* Dark background for tooltip */
+      color: #fff;
+      padding: 4px 8px;
+      border-radius: 4px;
+      font-size: 12px;
+      font-weight: 500;
+      opacity: 0;
+      pointer-events: none; /* So it doesn't interfere with hover */
+      transition: opacity 0.3s ease;
+      white-space: nowrap;
+  }
+
+  .interest-orb:hover .tooltip {
+      opacity: 1;
+  }
+  
+  /* --- Original Interests Section Styling (Unchanged) --- */
+  .interests-section {
+      background-color: #f8f9fa;
+      padding: 60px 0;
+  }
+
+  .interests-section .section-title h2 {
+      font-size: 32px;
+      font-weight: bold;
+      color: #173b6c;
+      margin-bottom: 20px;
+  }
+
+  .interests-section .section-title p {
+      font-size: 16px;
+      color: #6c757d;
+      line-height: 1.6;
+  }
+
+  .interests-box {
+      background: rgba(0, 0, 0, 0.8);
+      border-radius: 15px;
+      padding: 20px;
+      color: #fff;
+      box-sizing: border-box;
+      height: 100%;
+      width: 100%;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      transition: box-shadow 0.3s ease;
+      overflow: hidden;
+  }
+
+  /* --- Original Icon Styling (Unchanged) --- */
+  .interests-box .icon {
+      font-size: 48px;
+      color: #00aaff;
+      /* Note: The margin-bottom from the original icon is now handled by the .interest-orb container */
+  }
+
+  .interests-box h4 {
+      font-size: 20px;
+      font-weight: bold;
+      color: #fff;
+      margin-bottom: 15px;
+  }
+  
+  .interests-box h4 a {
+      color: inherit;
+      text-decoration: none;
+  }
+
+  .interests-box p {
+      font-size: 16px;
+      color: #e0e0e0;
+      margin: 0;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: normal;
+  }
+
+  .interests-box:hover {
+      box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
+  }
+</style>
 
 
-
-
-    <style>
-      /* Interests Section Styling */
-      .interests-section {
-        background-color: #f8f9fa;
-        /* Light background for the section */
-        padding: 60px 0;
-      }
-
-      .interests-section .section-title h2 {
-        font-size: 32px;
-        font-weight: bold;
-        color: #173b6c;
-        /* Dark color for the title */
-        margin-bottom: 20px;
-      }
-
-      .interests-section .section-title p {
-        font-size: 16px;
-        color: #6c757d;
-        /* Light grey color for the description */
-        line-height: 1.6;
-      }
-
-      /* Ensure proper box sizing and responsiveness */
-      .interests-box {
-        background: rgba(0, 0, 0, 0.8);
-        /* Semi-transparent black background */
-        border-radius: 15px;
-        padding: 20px;
-        color: #fff;
-        /* White text color for better readability */
-        box-sizing: border-box;
-        height: 100%;
-        /* Allow height to adjust based on content */
-        width: 100%;
-        text-align: center;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        transition: box-shadow 0.3s ease;
-        overflow: hidden;
-        /* Ensure content does not overflow */
-      }
-
-      /* Ensure consistent icon size */
-      .interests-box .icon {
-        font-size: 48px;
-        margin-bottom: 20px;
-        color: #00aaff;
-        /* Adjust icon color to stand out */
-      }
-
-      /* Ensure heading and paragraph size are responsive */
-      .interests-box h4 {
-        font-size: 20px;
-        font-weight: bold;
-        color: #fff;
-        margin-bottom: 15px;
-      }
-
-      .interests-box p {
-        font-size: 16px;
-        color: #e0e0e0;
-        /* Light grey text color for description */
-        margin: 0;
-        /* Remove margin to prevent text overflow */
-        overflow: hidden;
-        /* Prevent text from overflowing */
-        text-overflow: ellipsis;
-        /* Show ellipsis if text overflows */
-        white-space: normal;
-        /* Allow text to wrap */
-      }
-
-      /* Hover effect for glowing */
-      .interests-box:hover {
-        box-shadow: 0 0 15px rgba(255, 255, 255, 0.7);
-        /* Glowing effect */
-      }
-
-      /* Responsive adjustments */
-      @media (min-width: 992px) {
-        .interests-box {
-          margin: 0 15px;
-          /* Ensure proper spacing between columns */
-        }
-      }
-
-      @media (max-width: 767px) {
-        .interests-box {
-          padding: 15px;
-          height: auto;
-          /* Allow height to adjust based on content */
-        }
-
-        .interests-box .icon {
-          font-size: 36px;
-        }
-
-        .interests-box h4 {
-          font-size: 18px;
-        }
-
-        .interests-box p {
-          font-size: 14px;
-        }
-      }
-
-      /* Ensure columns have proper spacing */
-      .row {
-        margin: 0 -15px;
-      }
-
-      .col-lg-4,
-      .col-md-6 {
-        padding: 0 15px;
-      }
-    </style>
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact">
