--- a/index.html
+++ b/index.html
@@ -446,6 +446,22 @@
                 </div>
               </div>
             </div>
+            <div class="progress">
+              <span class="skill">
+                <!-- TypeScript Logo -->
+                <img
+                  src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-original.svg"
+                  alt="TypeScript" style="width:20px; height:20px; margin-right:8px; vertical-align:middle;">
+                TypeScript
+                <i class="val">40%</i>
+              </span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -472,13 +488,20 @@
                 </div>
               </div>
             </div>
+            <div class="progress">
+              <span class="skill"><i class="fab fa-php"></i> PHP <i class="val">50%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
 
 
 
             <div class="progress">
-              <span class="skill"><i class="fab fa-node-js"></i> Node.Js <i class="val">20%</i></span>
+              <span class="skill"><i class="fab fa-node-js"></i> Node.Js <i class="val">30%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">
                 </div>
               </div>
             </div>
@@ -494,7 +517,7 @@
       .skills {
         padding: 60px 0;
       }
-      
+
 
       .skills .section-title {
         text-align: left;
